class Pessoa:
    def __init__(self, nome, endereco, telefone) -> None:
        self._nome = nome
        self._endereco = endereco
        self._telefone = telefone